[workspace]
resolver = "2"
members = ["crates/*"]
exclude = ["crates/data", "experiments/*"]

[workspace.package]
version = "0.48.3"
edition = "2024"
license-file = "LICENSE"
description = "Oxen is a fast, unstructured data version control, to help version large machine learning datasets written in Rust."
homepage = "https://oxen.ai"
repository = "https://github.com/Oxen-AI/Oxen"
readme = "README.md"
keywords = ["machine-learning", "AI", "version-control"]
categories = [
    "command-line-utilities",
    "science",
    "multimedia",
    "database",
    "computer-vision",
]
rust-version = "1.94"

[workspace.lints.clippy]
disallowed-methods = "deny"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
actix-files = "0.6.2"
actix-http = "3.4.0"
actix-multipart = "0.7.2"
actix-multipart-test = "0.0.3"
actix-web = { version = "4.9.0", features = ["rustls"] }
actix-web-httpauth = "0.8.0"
approx = "0.5.1"
arrow = "=58.1.0"
astral-tokio-tar = "0.5.2"
async-compression = { version = "0.4.2", features = ["tokio", "gzip", "futures-io"] }
async-recursion = "1.1.1"
async-std = { version = "1.12.0", features = ["unstable"] }
async-tar = "0.5.0"
async-tempfile = "0.7.0"
async-trait = "0.1.80"
async-walkdir = "2.1.0"
async_zip = { version = "0.0.18", features = ["full"] }
aws-config = "1.8.15"
aws-sdk-s3 = "1.127.0"
aws-smithy-runtime-api = "1.11.6"
bincode = "1.3.3"
bytecount = "0.6.3"
bytes = "1.5.0"
bytesize = "1.3.0"
bytevec = "0.2.0"
chrono = "0.4.30"
clap = { version = "4.4.2", features = ["cargo", "derive"] }
colored = "2.0.4"
comfy-table = "7.0.1"
console-subscriber = "0.4.1"
criterion = { version = "2.10.1", package = "codspeed-criterion-compat", features = ["async_tokio"] }
deadqueue = "0.2.4"
derive_more = { version = "1.0.0", features = ["full"] }
dialoguer = "0.11.0"
difference = "2.0.0"
dirs = "5.0.1"
dotenvy = "0.15.7"
duckdb = { package = "duckdb", version = "=1.10502.0", default-features = false, features = ["serde_json"] }
dunce = "1.0.4"
env_logger = "0.11.3"
filetime = "0.2.22"
flate2 = { version = "1.1.0", default-features = false, features = ["zlib-ng"] }
fs_extra = "1.3.0"
futures = "0.3.28"
futures-util = "0.3.28"
glob = "0.3.1"
glob-match = "0.2.1"
hex = "0.4.3"
http = "1.1.0"
humantime = "2.1.0"
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
ignore = "0.4.20"
image = "0.25.2"
indicatif = "0.17.6"
infer = "0.16.0"
itertools = "0.13.0"
jsonwebtoken = "9.3.0"
jwalk = "0.8.1"
lazy_static = "1.4.0"
libduckdb-sys = { version = "=1.10502.0" }
# liboxen's `version` is kept in lockstep with `[workspace.package].version` by `bin/bump-version`.
# `path` is used for local builds; `version` is used by `cargo publish` so oxen-cli and oxen-server
# resolve liboxen from crates.io when published.
liboxen = { path = "crates/lib", version = "=0.48.3" }
lofty = "0.22.2"
log = "0.4.20"
lru = "0.14.0"
metrics = "0.24"
metrics-exporter-prometheus = "0.16"
mime = "0.3.17"
minus = { version = "5.4.0", features = ["static_output", "search"] }
mockito = "1.1.0"
mp4 = "0.14.0"
num_cpus = "1.16.0"
opentelemetry = "0.31"
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic", "http-json", "trace"] }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"] }
os_path = "0.8.0"
par-stream = { version = "0.10.2", features = ["runtime-tokio"] }
parking_lot = "0.12.1"
pathdiff = "0.2.3"
percent-encoding = "2.1"
polars = { version = "0.49.0", features = ["lazy", "parquet", "json", "ipc", "ipc_streaming", "dtype-full", "timezones", "random"] }
pyo3 = { version = "0.25", features = ["abi3-py311"] }
pyo3-async-runtimes = { version = "0.25", features = ["attributes", "tokio-runtime"] }
pyo3-polars = { version = "0.22", features = ["dtype-full"] }
qsv-sniffer = "0.10.3"
r2d2 = "0.8.10"
rand = "0.8.5"
rayon = "1.8.0"
redis = { version = "0.27.2", features = ["r2d2"] }
regex = "1.10.2"
reqwest = { version = "0.13.2", features = ["multipart", "json", "gzip", "stream", "query"] }
rmp-serde = "1.3.0"
rocksdb = { version = "0.22.0", default-features = false, features = ["lz4", "snappy", "multi-threaded-cf"] }
s3s = "0.13"
s3s-fs = "0.13"
sanitize-filename = "0.6.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_derive = "1.0.188"
serde_json = "1.0.106"
serde_with = "3.13.0"
serial_test = "3.2.0"
sha2 = "0.10.8"
simdutf8 = "0.1.4"
sql_query_builder = { version = "2.1.0", features = ["postgresql"] }
sqlparser = "0.53.0"
strum = { version = "0.26.3", features = ["derive"] }
sysinfo = "0.33.0"
tar = "0.4.44"
# TODO: Replace all tempfile use with async-tempfile
tempfile = "3.8.0"
thiserror = "2.0.18"
thumbnails = "0.2.1"
time = { version = "0.3.28", features = ["serde", "formatting"] }
tokio = { version = "1.32.0", features = ["full", "tracing"] }
tokio-console = "0.1.13"
tokio-stream = "0.1.17"
tokio-util = { version = "0.7.8", features = ["compat"] }
toml = "0.8.19"
tracing = "0.1"
tracing-actix-web = "0.7"
tracing-appender = "0.2"
tracing-log = "0.2"
tracing-opentelemetry = "0.32"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter", "registry"] }
url = "2.4.1"
urlencoding = "2.1.3"
utoipa = { version = "5", features = ["time"] }
utoipa-swagger-ui = { version = "9", features = ["actix-web"] }
uuid = { version = "1.4.1", features = ["serde", "v4"] }
walkdir = "2.5.0"
xxhash-rust = { version = "0.8.7", features = ["xxh3"] }
zip = { version = "2.4.1", default-features = false, features = ["deflate"] }

[profile.dev]
debug = "limited"

[profile.dev.package."*"]
debug = false
strip = "symbols"
debug-assertions = false

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true

[profile.profiling]
inherits = "release"
debug = true
# Undo `strip = true` from `release` so debug info actually reaches the binary.
strip = "none"
