[package]
name = "oxen"
version = "0.44.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "oxen"
crate-type = ["cdylib"]

[dependencies]
liboxen = { path = "../oxen-rust/src/lib", features = ["perf-logging"] }
log = "0.4.17"
pyo3 = { version = "0.25" }
# pyo3-asyncio = { version = "0.22.0", features = ["attributes", "tokio-runtime"] }
# pyo3-asyncio = { git = "https://github.com/kcking/pyo3-asyncio.git", rev = "ab8ad9a1dbd3a81d39c8133c415b3396772c1d37", features = ["attributes", "tokio-runtime"] }
pyo3-async-runtimes = { version = "0.25", features = [
    "attributes",
    "async-std-runtime",
    "tokio-runtime",
] }
pyo3-log = "0.12"
pyo3-polars = { version = "0.22", features = ["dtype-full"] }
reqwest = { version = "0.12.2", features = [
    "multipart",
    "json",
    "gzip",
    "stream",
] }
serde_json = "1.0.106"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.4.1", features = ["serde", "v4"] }

[build-dependencies]
bindgen = { version = "0.71.1", default-features = false, features = [
    "runtime",
] }
cc = { version = "1.0", features = ["parallel"] }
glob = "0.3"
pkg-config = { version = "0.3", optional = true }

[profile.release]
lto = true
