[package]
name = "demo"
version.workspace = true
edition.workspace = true
license-file.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[dependencies]
xxhash-rust = { workspace = true, features = ["xxh3"] }

[lints]
workspace = true
