[package]
name = "liboxen"
version = { workspace = true }
edition = { workspace = true }
license-file = { workspace = true }
description = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
keywords = { workspace = true }
categories = ["science", "multimedia", "database"]
publish = true

[package.metadata.docs.rs]
default-target = "x86_64-unknown-linux-gnu"
features = ["duckdb"]                       # this is without "duckdb/bundled"
no-default-features = true

[package.metadata.cargo-machete]
ignored = ["astral-tokio-tar", "libduckdb-sys"]

[lib]
name = "liboxen"
path = "src/lib.rs"

[features]
default = ["duckdb/bundled"]
docs = ["duckdb"]
ffmpeg = ["thumbnails"]
metrics = ["dep:metrics"]
otel = [
    "dep:opentelemetry",
    "dep:opentelemetry_sdk",
    "dep:opentelemetry-otlp",
    "dep:tracing-opentelemetry",
]
perf-logging = []
production = ["metrics", "otel", "ffmpeg", "perf-logging", "default"]
# Enables `liboxen::test`. Automatically on during `cargo test` (via `cfg(test)`); downstream crates
# must enable this feature explicitly via dev-dependencies to use `liboxen::test::*` in their own
# integration tests. Benches that consume `liboxen::test` declare `required-features = ["test-utils"]`.
test-utils = []

[dependencies]
approx = { workspace = true }
arrow = { workspace = true }
astral-tokio-tar = { workspace = true }
async-compression = { workspace = true }
async-std = { workspace = true }
async-tar = { workspace = true }
async-tempfile = { workspace = true }
async-trait = { workspace = true }
async-walkdir = { workspace = true }
aws-config = { workspace = true }
aws-sdk-s3 = { workspace = true }
aws-smithy-runtime-api = { workspace = true }
bincode = { workspace = true }
bytecount = { workspace = true }
bytes = { workspace = true }
bytesize = { workspace = true }
bytevec = { workspace = true }
colored = { workspace = true }
comfy-table = { workspace = true }
deadqueue = { workspace = true }
derive_more = { workspace = true }
difference = { workspace = true }
dirs = { workspace = true }
duckdb = { workspace = true, optional = true }
dunce = { workspace = true }
filetime = { workspace = true }
flate2 = { workspace = true }
fs_extra = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
glob = { workspace = true }
glob-match = { workspace = true }
http = { workspace = true }
humantime = { workspace = true }
ignore = { workspace = true }
image = { workspace = true }
indicatif = { workspace = true }
infer = { workspace = true }
itertools = { workspace = true }
jwalk = { workspace = true }
lazy_static = { workspace = true }
libduckdb-sys = { workspace = true, optional = true }
lofty = { workspace = true }
log = { workspace = true }
lru = { workspace = true }
metrics = { workspace = true, optional = true }
minus = { workspace = true }
mp4 = { workspace = true }
num_cpus = { workspace = true }
opentelemetry = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }
os_path = { workspace = true }
oxen-macros = { path = "../oxen-macros", version = "0.47.0" }
par-stream = { workspace = true }
parking_lot = { workspace = true }
pathdiff = { workspace = true }
polars = { workspace = true }
qsv-sniffer = { workspace = true }
r2d2 = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
redis = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
rmp-serde = { workspace = true }
rocksdb = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
sha2 = { workspace = true }
simdutf8 = { workspace = true }
sql_query_builder = { workspace = true }
sqlparser = { workspace = true }
strum = { workspace = true, features = ["derive"] }
sysinfo = { workspace = true }
tar = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
thumbnails = { workspace = true, optional = true }
time = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-opentelemetry = { workspace = true, optional = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
urlencoding = { workspace = true }
utoipa = { workspace = true }
uuid = { workspace = true }
walkdir = { workspace = true }
xxhash-rust = { workspace = true }
zip = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
mockito = { workspace = true }
s3s = { workspace = true }
s3s-fs = { workspace = true }
serial_test = { workspace = true }

[lints]
workspace = true

[[bench]]
name = "add"
harness = false

[[bench]]
name = "download"
harness = false
required-features = ["test-utils"]

[[bench]]
name = "fetch"
harness = false
required-features = ["test-utils"]

[[bench]]
name = "push"
harness = false
required-features = ["test-utils"]

[[bench]]
name = "workspace_add"
harness = false
required-features = ["test-utils"]
