[package]
name = "oxen-macros"
version = { workspace = true }
edition = { workspace = true }
license-file = { workspace = true }
description = "Proc-macros for the oxen workspace."
homepage = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
keywords = { workspace = true }
categories = ["science"]
publish = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }

[dev-dependencies]
# Used in integration tests to validate that the `#[source]` attribute the
# macro injects is correctly picked up by `#[derive(thiserror::Error)]` for
# `Error::source()` chaining.
thiserror = { workspace = true }

[lints]
workspace = true
