[package]
name = "oxen-py"
version = "0.46.7"
edition.workspace = true

[lib]
name = "oxen"
crate-type = ["cdylib"]

[dependencies]
env_logger = "0.11"
liboxen = { path = "../lib", features = ["perf-logging"] }
log = "0.4.17"
pyo3 = { version = "0.25" }
pyo3-async-runtimes = { version = "0.25", features = ["attributes", "async-std-runtime", "tokio-runtime"] }
pyo3-polars = { version = "0.22", features = ["dtype-full"] }
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true

[build-dependencies]
bindgen = { version = "0.71.1", default-features = false, features = ["runtime"] }
cc = { version = "1.0", features = ["parallel"] }
glob = "0.3"
pkg-config = { version = "0.3", optional = true }
