[package]
name = "oxen-py"
version = { workspace = true }
edition = { workspace = true }
license = "Apache 2.0"  # Ideally, we'd use workspace = true, but oxen-python needs this file to be at its root.
                        # We can restore this once oxen-python's contents have been moved to the repository root.
homepage = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
keywords = { workspace = true }
publish = false

[lib]
name = "oxen_py" # The native extension module. Users still `import oxen` via the Python package wrapper.
crate-type = ["cdylib"] # PyO3 needs this crate to be a cdylib so it can link against it.

[features]
default = []
otel = ["liboxen/otel"]
production = ["otel", "default"]

[dependencies]
liboxen = { path = "../lib" }
log = { workspace = true }
pyo3 = { workspace = true }
pyo3-async-runtimes = { workspace = true }
pyo3-polars = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
uuid = { workspace = true }

[build-dependencies]
bindgen = { version = "0.71.1", default-features = false, features = ["runtime"] }
cc = { version = "1.0", features = ["parallel"] }
glob = { workspace = true }
pkg-config = { version = "0.3", optional = true }
