[package]
name = "oxen-webhook-broadcaster"
version = "0.36.3"
edition = "2021"
license-file = "LICENSE"
description = "Webhook broadcasting service for Oxen VCS"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
env_logger = "0.11"
liboxen = { path = "../lib" }
log = "0.4"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
