[package]
name = "lmdb-oxen"
version = "0.1.0"
edition = "2024"
publish = false

# keep this empty so that it is not included in the workspace
[workspace]

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
heed = "0.22.0"
liboxen  = { path = "../../crates/lib" }
thiserror = "2.0.18"
xxhash-rust = "0.8.15"
