[package]
name = "lmdb-oxen"
version = "0.1.0"
edition = "2024"
publish = false

# keep this empty so that it is not included in the workspace
[workspace]

[dependencies]
async-trait = "0.1.80"
clap = { version = "4.5.48", features = ["derive"] }
heed = "0.22.0"
liboxen  = { path = "../../crates/lib" }
rand = "0.10.1"
rmp-serde = "1.3.0"
serde = { version = "1.0.188", features = ["derive"] }
thiserror = "2.0.18"
tokio = { version = "1.32.0", features = ["full", "tracing"] }
xxhash-rust = "0.8.15"
