[package]
name = "dedup"
version = "0.1.0"
edition = "2021"

[workspace]

[[bin]]
name = "dedup"
path = "src/main.rs"

[dependencies]
async-trait = "0.1.88"
bincode = "1.3"
cargo = "0.88.0"
clap = { version = "4.5.38", features = ["derive"] }
fastcdc = "3.2.1"
flamegraph = "0.6.8"
flate2 = { version = "1.1.0", default-features = false, features = ["zlib-ng"] }
futures = "0.3.31"
hex = "0.4.3"
liboxen  = { path = "../../src/lib" }
rayon = "1.10.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sysinfo = "0.35.1"
thiserror = "2.0.12"
xxhash-rust = { version = "0.8.7", features = ["xxh3"] }
