[package]
name = "oxen-cli"
version = { workspace = true }
edition = { workspace = true }
license-file = { workspace = true }
description = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[[bin]]
name = "oxen"
path = "src/main.rs"

[dependencies]
async-trait = { workspace = true }
bytesize = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
colored = { workspace = true }
dialoguer = { workspace = true }
glob = { workspace = true }
liboxen = { path = "../lib" }
log = { workspace = true }
minus = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
oxen-test = { path = "../oxen-test" }
