[package]
name = "liboxen"
version = { workspace = true }
edition = { workspace = true }
license-file = { workspace = true }
description = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }
publish = true

[package.metadata.docs.rs]
default-target = "x86_64-unknown-linux-gnu"
features = ["duckdb"]                       # this is without "duckdb/bundled"
no-default-features = true

[package.metadata.cargo-machete]
ignored = ["astral-tokio-tar"]

[lib]
name = "liboxen"
path = "src/lib.rs"

[features]
default = ["duckdb/bundled"]
docs = ["duckdb"]
ffmpeg = ["thumbnails"]
perf-logging = []

[dependencies]
actix-web = { workspace = true }
approx = { workspace = true }
arrow = { workspace = true }
astral-tokio-tar = { workspace = true }
async-compression = { workspace = true }
async-std = { workspace = true }
async-tar = { workspace = true }
async-trait = { workspace = true }
aws-config = { workspace = true }
aws-sdk-s3 = { workspace = true }
bincode = { workspace = true }
bytecount = { workspace = true }
bytes = { workspace = true }
bytesize = { workspace = true }
bytevec = { workspace = true }
chrono = { workspace = true }
colored = { workspace = true }
comfy-table = { workspace = true }
deadqueue = { workspace = true }
derive_more = { workspace = true }
difference = { workspace = true }
dirs = { workspace = true }
duckdb = { workspace = true, optional = true }
dunce = { workspace = true }
env_logger = { workspace = true }
fd-lock = { workspace = true }
filetime = { workspace = true }
flate2 = { workspace = true }
fs_extra = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
glob = { workspace = true }
glob-match = { workspace = true }
http = { workspace = true }
humantime = { workspace = true }
ignore = { workspace = true }
image = { workspace = true }
indicatif = { workspace = true }
infer = { workspace = true }
itertools = { workspace = true }
jwalk = { workspace = true }
lazy_static = { workspace = true }
lofty = { workspace = true }
log = { workspace = true }
lru = { workspace = true }
minus = { workspace = true }
mp4 = { workspace = true }
num_cpus = { workspace = true }
os_path = { workspace = true }
par-stream = { workspace = true }
parking_lot = { workspace = true }
pathdiff = { workspace = true }
pluralizer = { workspace = true }
polars = { workspace = true }
qsv-sniffer = { workspace = true }
r2d2 = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
redis = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
rmp-serde = { workspace = true }
rocksdb = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
serde_url_params = { workspace = true }
serde_with = { workspace = true }
sha2 = { workspace = true }
simdutf8 = { workspace = true }
sql_query_builder = { workspace = true }
sqlparser = { workspace = true }
sysinfo = { workspace = true }
tar = { workspace = true }
tempfile = { workspace = true }
thumbnails = { workspace = true, optional = true }
time = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
toml = { workspace = true }
url = { workspace = true }
urlencoding = { workspace = true }
utoipa = { workspace = true }
uuid = { workspace = true }
walkdir = { workspace = true }
xxhash-rust = { workspace = true }
zip = { workspace = true }

[dev-dependencies]
mockito = { workspace = true }
oxen-test = { path = "../oxen-test" }
serial_test = { workspace = true }
